fixed alignment issue with the current image, but subject to change

--- a/borderPractice/borderTemplates.css
+++ b/borderPractice/borderTemplates.css
@@ -15,6 +15,12 @@ body {
       width: 80%; */
 }
 
+img {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
+
 /* Horizontal Rules */
 /* Looks like the key is to style to border of the rule */
 #horizRule1 {
